# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
name = "test_util"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[[bin]]
name = "test_server"
path = "server/test_server.rs"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[lib]
path = "server/lib.rs"

[dependencies]
anyhow.workspace = true
async-stream = "0.3.3"
base64.workspace = true
bytes.workspace = true
console_static_text.workspace = true
deno_unsync = "0.3.0"
denokv_proto.workspace = true
fastwebsockets.workspace = true
flate2 = { workspace = true, features = ["default"] }
futures.workspace = true
glob.workspace = true
h2.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
lazy-regex.workspace = true
libc.workspace = true
lsp-types.workspace = true
monch.workspace = true
nix.workspace = true
once_cell.workspace = true
os_pipe.workspace = true
parking_lot.workspace = true
pretty_assertions.workspace = true
prost.workspace = true
regex.workspace = true
reqwest.workspace = true
ring.workspace = true
rustls-pemfile.workspace = true
rustls-tokio-stream.workspace = true
semver = "=1.0.14"
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
termcolor.workspace = true
tokio.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["consoleapi", "synchapi", "handleapi", "namedpipeapi", "winbase", "winerror"] }

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
deno_bench_util.workspace = true
deno_core = { workspace = true, features = ["include_js_files_for_snapshotting", "unsafe_use_unprotected_platform"] }
fastwebsockets = { workspace = true, features = ["upgrade", "unstable-split"] }
flaky_test = "=0.1.0"
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
once_cell.workspace = true
os_pipe.workspace = true
pretty_assertions.workspace = true
trust-dns-client = "=0.22.0"
trust-dns-server = "=0.22.1"
deno_lockfile.workspace = true
deno_runtime = { workspace = true, features = ["include_js_files_for_snapshotting"] }
deno_ast = { workspace = true, features = ["bundler", "cjs", "codegen", "dep_graph", "module_specifier", "proposal", "react", "sourcemap", "transforms", "typescript", "view", "visit"] }
tower-lsp.workspace = true
